<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.ui.registration.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/text_input_max_width">

            <TextView
                style="@style/AppTheme.TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center_horizontal"
                android:text="@string/profile_screen_title"
                android:textAllCaps="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/register_first_name"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_vertical_field_distance"
                android:hint="@string/register_last_name"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_vertical_field_distance"
                android:hint="@string/register_email"
                android:enabled="false"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_vertical_field_distance"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_telephone_number"
                    app:boxBackgroundColor="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_phone_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        app:errorEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_egn_last_four_digits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_vertical_field_distance"
                android:hint="@string/register_last_4_digits_of_egn"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_egn_last_four_digits_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_vertical_field_distance"
                android:hint="@string/register_organization"
                app:boxBackgroundColor="@null"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_organization_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_consent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/register_data_consent"
                app:buttonTint="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_data_disclaimer" />

            <Button
                android:id="@+id/button_save"
                app:icon="@drawable/ic_send"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/save" />

            <Button
                android:id="@+id/button_delete"
                app:icon="@drawable/ic_trash"
                style="@style/Widget.MaterialComponents.Button.Icon.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/delete_profile" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>