<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.ui.registration.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="@dimen/text_input_max_width">

            <TextView
                style="@style/AppTheme.TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:gravity="center_horizontal"
                android:text="@string/register_registration"
                android:textAllCaps="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/register_first_name"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_first_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_last_name"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_last_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_email"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_area_code"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/input_area_code_dropdown"
                    app:boxBackgroundColor="@null"
                    app:layout_constraintLeft_toLeftOf="@+id/input_email"
                    app:layout_constraintTop_toBottomOf="@+id/input_email">

                    <AutoCompleteTextView
                        android:id="@+id/input_area_code_dropdown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dropDownWidth="@dimen/text_input_max_width"
                        android:inputType="none"
                        tools:text="+359" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_telephone_number"
                    app:boxBackgroundColor="@null">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_phone_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        app:errorEnabled="true" />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_egn_last_four_digits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_last_4_digits_of_egn"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_egn_last_four_digits_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:maxLength="4"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_organization"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_organization"
                android:labelFor="@+id/input_organization_dropdown"
                app:boxBackgroundColor="@null">

                <AutoCompleteTextView
                    android:id="@+id/input_organization_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:dropDownWidth="@dimen/text_input_max_width"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_password"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_repeat_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_repeat_password"
                app:boxBackgroundColor="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_repeat_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:errorEnabled="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkbox_consent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/register_data_consent"
                app:buttonTint="@color/colorPrimary" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_data_disclaimer" />

            <CheckBox
                android:id="@+id/checkbox_over_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/register_confirm_over_18"
                app:buttonTint="@color/colorPrimary"
                android:focusableInTouchMode="true"
                android:focusable="true"/>

            <Button
                android:id="@+id/button_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/register_create_profile" />

            <Button
                android:id="@+id/button_login"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/login_login" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>